# fastapi-starter

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  dev.sh  docker-compose.yml  migrate.py  pyproject.toml
alembic/: env.py
app/: main.py  models.py
app/api/v1/: __init__.py  auth.py  posts.py
app/auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/core/: auth.py  config.py  decorators.py  error.py  exceptions.py  logging.py  redis.py  schemas.py
app/core/config/: __init__.py  app.py  base.py  cors.py  database.py  files.py  logging.py  redis.py  security.py  settings.py
app/database/: session.py
app/models/: __init__.py  audit_log.py  base.py  models.py  schemas.py
app/posts/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/utils/: pagination.py
docs/: README.md  domain-module-development-guide.md  migrations.md  project-structure-best-practices.md
tests/: conftest.py  test_auth.py
